@startuml

left to right direction
hide empty members

entity Veterianaria{
nombre
direccion
listaMascotas
}

entity Mascota{
     nombre
     especie
     edad
     duenio
     alta
}

entity Duenio{
nombre
edad
}

Mascota "1..*" -- "1"Veterianaria : atiende <

Mascota"1..*" -- "1"Duenio : tiene >







@enduml